samples/_failures_safe/1761247664_5a074f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_807607e6.c: In function ‘dfs’:
./samples/SAFE/__tmp_807607e6.c:178:5: error: expected expression at end of input
  178 |     for (
      |     ^~~
./samples/SAFE/__tmp_807607e6.c:178:5: error: expected declaration or statement at end of input
